// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the block can initialize to on 1`] = `
<DocumentFragment>
  <div
    class="on"
    data-testid="block"
    role="gridcell"
    style="background-color: rgb(0, 0, 0); width: 30px; height: 30px; margin: 2px; transition: all .5s;"
  />
</DocumentFragment>
`;

exports[`the block can initialize with a color 1`] = `
<DocumentFragment>
  <div
    class="on"
    data-testid="block"
    role="gridcell"
    style="background-color: rgb(51, 102, 153); width: 30px; height: 30px; margin: 2px; transition: all .5s;"
  />
</DocumentFragment>
`;

exports[`the block defaults to off 1`] = `
<DocumentFragment>
  <div
    class="off"
    data-testid="block"
    role="gridcell"
    style="background-color: white; width: 30px; height: 30px; margin: 2px; transition: all .5s;"
  />
</DocumentFragment>
`;
